# whist

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .spellcheck.yml  LICENSE  README.md  SECURITY.md  app.json  browser_config.py  client_log.txt  commit-wf.sh  db.sql  g3.pkl  g4.pkl  host_service_logging_file.txt  log_grabber_log.txt  netlify.toml  package.json  pylintrc  pyproject.toml  test.sh
browser/hybrid/: whist_build.gni
client-applications/: .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  Fractal - Shortcut.lnk  README.md  electron-builder.config.js  fractal-apple-codesigning-certificate.p12  package.json  pyproject.toml  retrieve_protocol_binary.py  retrieve_protocol_packages.py  snowpack.config.js  tailwind.config.js  tsconfig.json
client-applications/.github/: CODEOWNERS  pull_request_template.md
client-applications/android/: README.md
client-applications/browser/: .eslintrc.js  .gitignore  README.md  package.json  publish.bat  publish.sh  setVersion.gyp
client-applications/config/: build.js  configs.js  constants.js  keys.js  paths.js
client-applications/desktop/: .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc  README.md  babel.config.js  build.bat  build.py  build.sh  build_and_publish.py  connection_id.txt  decs.d.ts  electron-builder.config.js  electron-builder.env  env.json  generateEnv.ts  jest.config.js  jest.config.ts  jsconfig.json  new-build.sh  package-lock.json  package.json  protocol-build - Shortcut.lnk  publish-2.sh  publish.bat  publish.sh  renovate.json  retrieve_env.py  setVersion.gyp  setVersion.ps1  snowpack.config.js  ssh_host_ecdsa_key.pub  tailwind.config.js  tmpicns.rsrc  tsconfig.json  upload.bat
client-applications/ios/: README.md
client-applications/macos/: README.md  package-lock.json  package.json
client-applications/mobile/: README.md  app.json
client-applications/new-application/: .eslintrc.js  .gitignore  README.md  awsping.darwin.amd64.tgz  package.json  tsconfig.json
client-applications/react-app/: package-lock.json  package.json
client-applications/scripts/: afterSign.js  build-package-helpers.js  clearAppData.js  execCommand.js  package-local.js  package-notarize.js  package-publish.js  postinstall.js  start-lite.js  start.js  testManual.js
client-applications/utils/: browsers.ts
client-applications/web/: README.md
client-applications/windows/: package-lock.json  package.json
protocol/: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  CMakeLists_save.txt  Dockerfile  Dockerfile.builder.18  Dockerfile.builder.20  Dockerfile.builder.ubuntu18  Dockerfile.builder.ubuntu20  FractalProtocol.cbp  Makefile  README.md  build_protocol.sh  build_protocol_targets.sh  build_server_protocol.sh  cmake_install.cmake  cninja.bat  cnmake.bat  compile_commands.json  copy-loading.sh  coverage.info  cppcheck_suppressions.txt  deploy_server_release.py  docker-build-image.sh  docker-build-protocol.sh  docker-create-builder.sh  docker-run-builder-shell.sh  docker-shell.sh  download-binaries.bat  download-binaries.sh  fclient  get-shared-libs.bat  get-shared-libs.sh  get-unison.bat  get-unison.sh  get_latest_sentry.py  lint-cmake.sh  (+11 more)
protocol/.actionspanel/: buttons.yml
protocol/.download-binaries-cache/: .libcache
protocol/.github/: CODEOWNERS  choco-install.config  clang_matcher.json  cppcheck_matcher.json  deploy_artifact.sh  deploy_artifact_ssh.sh  gcc_matcher.json  get_vm_ip.sh  install_cuda_windows.ps1  msvc_linker_matcher.json  pull_request_template.md  sentry_env_from_release.py  sshkey
protocol/DDI_NVENC/: README.md
protocol/android/: README.md  local.properties
protocol/client/: CMakeLists.txt  Makefile  README.md  audio.c  audio.cpp  audio.h  audio_path.cpp  audio_path.h  bitrate.c  bitrate.h  buildme  client.bat  client_audio.c  client_audio.h  client_main.c  client_network.c  client_network.h  client_statistic.c  client_statistic.h  client_utils.c  client_utils.h  client_video.c  client_video.h  cmake_install.cmake  display_notifs.h  display_notifs_linux.c  display_notifs_mac.m  display_notifs_windows.c  event-loops  fclient  fclient.bat  handle_frontend_events.c  handle_frontend_events.cpp  handle_frontend_events.h  handle_sdl_event.c  handle_sdl_event.h  handle_server_message.c  handle_server_message.cpp  handle_server_message.h  main.c  (+41 more)
protocol/cmake/: CompilerOptions.cmake  GetGitRevisionDescription.cmake  clang-format.cmake  compiler-options.cmake  default-build.cmake  embed-file.cmake  version-info.cmake
protocol/desktop/: C:\log.txt  CMakeLists.txt  Fractal Desktop.sln  Fractal Desktop.vcxproj  Fractal Desktop.vcxproj.filters  GNUmakefile  Info.plist  README.md  android_jni_cache.c  android_jni_cache.h  audio.c  audio.h  desktop  desktop.bat  desktop.sh  desktop_utils.c  desktop_utils.h  fractalgetopt.c  fractalgetopt.h  getoptlong.c  handle_server_message.c  handle_server_message.h  linux-client-setup.sh  log.txt  main.c  main.h  makefile  native_window_utils.h  native_window_utils_mac.m  network.c  network.h  peer.c  peer.h  sdl_event_handler.c  sdl_event_handler.h  sdl_utils.c  sdl_utils.h  server_message_handler.c  server_message_handler.h  ssh_host_ecdsa_key.pub  (+2 more)
protocol/docs/: Doxyfile
protocol/fractal/: CMakeLists.txt  Makefile  cmake_install.cmake
protocol/include/: aes.c  aes.h  alsacapture.c  alsacapture.h  audiocapture.c  audiocapture.h  audiodecode.c  audiodecode.h  audioencode.c  audioencode.h  clipboard.c  clipboard.h  clipboard_osx.h  clipboard_osx.m  clipboard_thread.c  cursor.h  decode.c  decode.h  desktop.c  desktop.h  dxgicapture.c  dxgicapture.h  encode.c  encode.h  findip.c  findip.h  fractal.c  fractal.h  fractal.sha.v  helpers.c  input.c  input.h  linkedlist.c  linkedlist.h  linuxcursor.c  linuxcursor.h  linuxinput.c  linuxinput.h  mac_clipboard.c  mac_utils.c  (+24 more)
protocol/ios/: README.md
protocol/lib/: CMakeLists.txt  fractal-protocol - Shortcut.lnk
protocol/profilers/: .gitignore  README.md
protocol/server/: CMakeLists.txt  (+57 more)
(+5824 files in other folders)
