[project]
name = "fractal"
version = "1.0.0"
description = "Fractal monorepository pyproject.toml"
authors = [
    "Fractal Developers <developers@fractal.co>"
]
license = "UNLICENSED"
readme = "README.md"
python = "^3.9"
homepage = "https://fractal.co"
repository = "https://github.com/fractal/fractal"
documentation = "https://docs.fractal.co"

keywords = ["packaging", "dependency", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]
pylint = "^2.10.2"

[dev-dependencies]
black = { version = "21.8b0", python = "^3.9" }

# Configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 100
target-version = ["py39"]
