[project]
name = "whist"
version = "1.0.0"
description = "Whist Browser"
authors = [
    "Whist Technologies, Inc. <support@whist.com>"
]
license = "UNLICENSED"
readme = "README.md"
python = "^3.9"
homepage = "https://whist.com"
repository = "https://github.com/whisthq/whist"
documentation = "https://docs.whist.com"

keywords = ["packaging", "dependency", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]
pylint = "^2.12.1"

[dev-dependencies]
black = { version = "22.1.0", python = "^3.9" }

# Configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python. Multiline strings are treated as
# verbose regular expressions by Black. Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 100
target-version = ["py39"]
